--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Courgette&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #f7f0ff; /* soft pastel purple */
+      background-color: #f7f0ff;
       font-family: 'Quicksand', sans-serif;
       color: #4a3f6b;
       padding: 30px;
@@ -17,7 +17,7 @@
     .container {
       max-width: 800px;
       width: 100%;
-      background: #fffdfa url('https://www.transparenttextures.com/patterns/paper-fibers.png'); /* soft paper texture */
+      background: #fffdfa url('https://www.transparenttextures.com/patterns/paper-fibers.png');
       padding: 30px 40px;
       border-radius: 20px;
       box-shadow: 5px 5px 15px rgba(0,0,0,0.1);
@@ -25,7 +25,7 @@
     }
 
     h1 {
-      color: #a99fe8; /* muted pastel purple */
+      color: #a99fe8;
       text-align: center;
       font-family: 'Courgette', cursive;
       font-size: 2.4em;
@@ -33,7 +33,7 @@
     }
 
     h2 {
-      color: #a3c5ff; /* soft pastel blue */
+      color: #a3c5ff;
       font-size: 1.7em;
       margin-top: 30px;
       margin-bottom: 15px;
@@ -47,15 +47,14 @@
     }
 
     a:hover {
-      color: #8c9ce8; /* soft purple hover */
+      color: #8c9ce8;
     }
 
-    /* Reading Reflections button centered */
     .btn-link {
       display: block;
       margin: 0 auto 25px auto;
       padding: 10px 20px;
-      background-color: #d6c8ff; /* soft pastel purple */
+      background-color: #d6c8ff;
       color: #4a3f6b;
       border-radius: 12px;
       font-weight: 600;
@@ -67,34 +66,62 @@
     }
 
     .btn-link:hover {
-      background-color: #b8d0ff; /* soft pastel blue */
+      background-color: #b8d0ff;
       color: white;
     }
 
-    ul {
-      list-style: none;
-      padding-left: 0;
+    /* Scrapbook-style homework notes */
+    .homework-list {
       display: flex;
       flex-wrap: wrap;
-      gap: 10px;
+      gap: 20px;
+      justify-content: center;
+      margin-bottom: 25px;
     }
 
-    li {
-      background-color: #d6c8ff; /* sticky note color */
-      padding: 8px 12px;
-      border-radius: 8px;
-      box-shadow: 1px 2px 4px rgba(0,0,0,0.1);
-      font-size: 1em;
-      min-width: 120px;
+    .homework-list li {
+      list-style: none;
+      min-width: 140px;
+      max-width: 180px;
+      padding: 12px 15px;
+      background-color: #d6c8ff;
+      border-radius: 10px 14px 10px 14px;
+      box-shadow: 3px 4px 8px rgba(0,0,0,0.15);
       text-align: center;
+      font-size: 1em;
+      position: relative;
+      transform: rotate(0deg);
+      transition: transform 0.3s;
     }
 
-    li a {
+    /* Slight tilt for collage effect */
+    .homework-list li:nth-child(1) { transform: rotate(-2deg); }
+    .homework-list li:nth-child(2) { transform: rotate(1deg); }
+    .homework-list li:nth-child(3) { transform: rotate(-1deg); }
+
+    /* Tape behind sticky notes */
+    .homework-list li::before {
+      content: "";
+      position: absolute;
+      top: -6px;
+      left: 20%;
+      width: 60%;
+      height: 8px;
+      background: #c9b3ff;
+      border-radius: 3px;
+      transform: rotate(-2deg);
+      z-index: -1;
+    }
+
+    .homework-list li a {
       color: #4a3f6b;
       font-weight: normal;
+      display: block;
+      margin-top: 5px;
+      font-size: 0.95em;
     }
 
-    li a:hover {
+    .homework-list li a:hover {
       color: #8c9ce8;
     }
 
@@ -177,19 +204,15 @@
     <a href="reflections.html" class="btn-link">Reading Reflections</a>
 
     <h2>Homeworks:</h2>
-    <ul>
+    <ul class="homework-list">
       <li>Homework #1</li>
       <li>Homework #2
-        <ul>
-          <li><a href="homework2-image1.html">Image 1</a></li>
-          <li><a href="homework2-image2.html">Image 2</a></li>
-        </ul>
+        <a href="homework2-image1.html">Image 1</a>
+        <a href="homework2-image2.html">Image 2</a>
       </li>
       <li>Homework #3
-        <ul>
-          <li><a href="homework3-part1.html">Part 1</a></li>
-          <li><a href="homework3part2.html">Part 2</a></li>
-        </ul>
+        <a href="homework3-part1.html">Part 1</a>
+        <a href="homework3part2.html">Part 2</a>
       </li>
     </ul>
 
@@ -203,3 +226,4 @@ As the eldest daughter of an immigrant family and as a Muslim American, I aspire
 
 </body>
 </html>
+
