--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,6 +8,8 @@
   <style>
     body {
       background-color: #f7f0ff;
+      background-image: url('https://www.transparenttextures.com/patterns/paper-fibers.png');
+      background-size: cover;
       font-family: 'Quicksand', sans-serif;
       color: #4a3f6b;
       padding: 30px;
@@ -17,7 +20,9 @@
     .container {
       max-width: 800px;
       width: 100%;
-      background: #fffdfa url('https://www.transparenttextures.com/patterns/paper-fibers.png');
+      background: rgba(255, 253, 250, 0.9);
+      background-image: url('https://www.transparenttextures.com/patterns/paper-fibers.png');
+      background-blend-mode: overlay;
       padding: 30px 40px;
       border-radius: 20px;
       box-shadow: 5px 5px 15px rgba(0,0,0,0.1);
@@ -33,7 +38,6 @@
     }
 
     h2 {
-      color: #a3c5ff;
       font-size: 1.7em;
       margin-top: 30px;
       margin-bottom: 15px;
@@ -70,61 +74,6 @@
       color: white;
     }
 
-    /* Scrapbook-style homework notes */
-    .homework-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-      margin-bottom: 25px;
-    }
-
-    .homework-list li {
-      list-style: none;
-      min-width: 140px;
-      max-width: 180px;
-      padding: 12px 15px;
-      background-color: #d6c8ff;
-      border-radius: 10px 14px 10px 14px;
-      box-shadow: 3px 4px 8px rgba(0,0,0,0.15);
-      text-align: center;
-      font-size: 1em;
-      position: relative;
-      transform: rotate(0deg);
-      transition: transform 0.3s;
-    }
-
-    /* Slight tilt for collage effect */
-    .homework-list li:nth-child(1) { transform: rotate(-2deg); }
-    .homework-list li:nth-child(2) { transform: rotate(1deg); }
-    .homework-list li:nth-child(3) { transform: rotate(-1deg); }
-
-    /* Tape behind sticky notes */
-    .homework-list li::before {
-      content: "";
-      position: absolute;
-      top: -6px;
-      left: 20%;
-      width: 60%;
-      height: 8px;
-      background: #c9b3ff;
-      border-radius: 3px;
-      transform: rotate(-2deg);
-      z-index: -1;
-    }
-
-    .homework-list li a {
-      color: #4a3f6b;
-      font-weight: normal;
-      display: block;
-      margin-top: 5px;
-      font-size: 0.95em;
-    }
-
-    .homework-list li a:hover {
-      color: #8c9ce8;
-    }
-
     /* Bio container with polaroid shadow and scroll */
     .bio-container {
       position: relative;
@@ -147,7 +96,7 @@
 
     .bio {
       position: relative;
-      background-color: #fffdfa;
+      background-color: rgba(255, 253, 250, 0.9);
       padding: 20px;
       border-radius: 15px;
       box-shadow: 2px 3px 6px rgba(0,0,0,0.1);
@@ -169,6 +118,45 @@
     .bio-container::-webkit-scrollbar-thumb {
       background-color: #b8d0ff;
       border-radius: 10px;
+    }
+
+    /* Centered 2-column homework list */
+    .homework-list-centered {
+      display: grid;
+      grid-template-columns: repeat(2, minmax(150px, 200px));
+      justify-content: center;
+      gap: 15px 25px;
+      list-style: none;
+      padding: 0;
+      margin: 0 auto 25px auto;
+      text-align: center;
+    }
+
+    .homework-list-centered li {
+      background-color: #d6c8ff;
+      border-radius: 12px;
+      padding: 12px 15px;
+      font-size: 1em;
+      box-shadow: 2px 3px 6px rgba(0,0,0,0.15);
+      transition: transform 0.2s;
+      color: #4a3f6b;
+    }
+
+    .homework-list-centered li a {
+      display: block;
+      margin-top: 5px;
+      font-size: 0.95em;
+      color: #4a3f6b;
+      font-weight: normal;
+    }
+
+    .homework-list-centered li a:hover {
+      color: #8c9ce8;
+    }
+
+    h2.homeworks-title {
+      text-align: center;
+      color: #a99fe8; /* same as your name */
     }
 
     /* Stickers */
@@ -201,29 +189,32 @@
   <div class="container">
     <h1>Sauda Afrose</h1>
 
-    <a href="reflections.html" class="btn-link">Reading Reflections</a>
-
-    <h2>Homeworks:</h2>
-    <ul class="homework-list">
-      <li>Homework #1</li>
-      <li>Homework #2
-        <a href="homework2-image1.html">Image 1</a>
-        <a href="homework2-image2.html">Image 2</a>
-      </li>
-      <li>Homework #3
-        <a href="homework3-part1.html">Part 1</a>
-        <a href="homework3part2.html">Part 2</a>
-      </li>
-    </ul>
-
     <div class="bio-container">
       <div class="bio-shadow"></div>
-      <p class="bio">
-As the eldest daughter of an immigrant family and as a Muslim American, I aspire to use media to express the perspectives of minority groups in America. Often times in mainstream media sources, minority groups and women of color aren't accurately depicted. I've noticed this pattern in many media sources which is why I chose to major in Media Studies with a concentration in Journalism at Hunter College. I wanted to combine my love for writing, design and social justice and express that through media which is now the most widely consumed creation in today's polarized world. Due to that interest, I hope to talk about propaganda and media in this class and how different people can perceive one piece of media in different ways. So far my work in media has mostly revolved around graphic design. I have done graphic designing for a publishing company in the past and now I do it for Hunter College's BSA club through Canva. However, I believe I still have a lot to learn about the different features and functions of graphic design which I hope to learn in this class. The only graphic design platform I know how to use is Canva but I hope to expand that knowledge to platforms like Photoshop. When designing, I find myself drawn to vintage aesthetics or aesthetics that reflect my South Asian heritage. I like using softer colors as opposed to brighter ones and I love playing with patterns, fonts and word formats. I like using pictures in my designs and I like making my designs a bit quirky and messy as opposed to brushed up and elegant.
-      </p>
+      <div class="bio">
+        <p>
+          As the eldest daughter of an immigrant family and as a Muslim American, I aspire to use media to express the perspectives of minority groups in America. Often times in mainstream media sources, minority groups and women of color aren't accurately depicted. I've noticed this pattern in many media sources which is why I chose to major in Media Studies with a concentration in Journalism at Hunter College. I wanted to combine my love for writing, design and social justice and express that through media which is now the most widely consumed creation in today's polarized world. Due to that interest, I hope to talk about propaganda and media in this class and how different people can perceive one piece of media in different ways. So far my work in media has mostly revolved around graphic design. I have done graphic designing for a publishing company in the past and now I do it for Hunter College's BSA club through Canva. However, I believe I still have a lot to learn about the different features and functions of graphic design which I hope to learn in this class. The only graphic design platform I know how to use is Canva but I hope to expand that knowledge to platforms like Photoshop. When designing, I find myself drawn to vintage aesthetics or aesthetics that reflect my South Asian heritage. I like using softer colors as opposed to brighter ones and I love playing with patterns, fonts and word formats. I like using pictures in my designs and I like making my designs a bit quirky and messy as opposed to brushed up and elegant.
+        </p>
+      </div>
     </div>
+
+    <a href="reflections.html" class="btn-link">Reading Reflections</a>
+
+    <h2 class="homeworks-title">Homeworks:</h2>
+    <ul class="homework-list-centered">
+      <li>Homework #1 <a href="#">Link</a></li>
+      <li>Homework #2 <a href="#">Link</a></li>
+      <li>Homework #3 <a href="#">Link</a></li>
+      <li>Homework #4 <a href="#">Link</a></li>
+      <li>Homework #5 <a href="#">Link</a></li>
+      <li>Homework #6 <a href="#">Link</a></li>
+      <li>Homework #7 <a href="#">Link</a></li>
+      <li>Homework #8 <a href="#">Link</a></li>
+      <li>Homework #9 <a href="#">Link</a></li>
+      <li>Homework #10 <a href="#">Link</a></li>
+    </ul>
+
   </div>
 
 </body>
 </html>
-
