--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -38,6 +37,7 @@
     }
 
     h2 {
+      color: #a3c5ff;
       font-size: 1.7em;
       margin-top: 30px;
       margin-bottom: 15px;
@@ -72,6 +72,60 @@
     .btn-link:hover {
       background-color: #b8d0ff;
       color: white;
+    }
+
+    /* Scrapbook-style homework notes */
+    .homework-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      margin-bottom: 25px;
+    }
+
+    .homework-list li {
+      list-style: none;
+      min-width: 140px;
+      max-width: 180px;
+      padding: 12px 15px;
+      background-color: #d6c8ff;
+      border-radius: 10px 14px 10px 14px;
+      box-shadow: 3px 4px 8px rgba(0,0,0,0.15);
+      text-align: center;
+      font-size: 1em;
+      position: relative;
+      transform: rotate(0deg);
+      transition: transform 0.3s;
+    }
+
+    /* Slight tilt for collage effect */
+    .homework-list li:nth-child(odd) { transform: rotate(-2deg); }
+    .homework-list li:nth-child(even) { transform: rotate(1deg); }
+
+    /* Tape behind sticky notes */
+    .homework-list li::before {
+      content: "";
+      position: absolute;
+      top: -6px;
+      left: 20%;
+      width: 60%;
+      height: 8px;
+      background: #c9b3ff;
+      border-radius: 3px;
+      transform: rotate(-2deg);
+      z-index: -1;
+    }
+
+    .homework-list li a {
+      color: #4a3f6b;
+      font-weight: normal;
+      display: block;
+      margin-top: 5px;
+      font-size: 0.95em;
+    }
+
+    .homework-list li a:hover {
+      color: #8c9ce8;
     }
 
     /* Bio container with polaroid shadow and scroll */
@@ -120,45 +174,6 @@
       border-radius: 10px;
     }
 
-    /* Centered 2-column homework list */
-    .homework-list-centered {
-      display: grid;
-      grid-template-columns: repeat(2, minmax(150px, 200px));
-      justify-content: center;
-      gap: 15px 25px;
-      list-style: none;
-      padding: 0;
-      margin: 0 auto 25px auto;
-      text-align: center;
-    }
-
-    .homework-list-centered li {
-      background-color: #d6c8ff;
-      border-radius: 12px;
-      padding: 12px 15px;
-      font-size: 1em;
-      box-shadow: 2px 3px 6px rgba(0,0,0,0.15);
-      transition: transform 0.2s;
-      color: #4a3f6b;
-    }
-
-    .homework-list-centered li a {
-      display: block;
-      margin-top: 5px;
-      font-size: 0.95em;
-      color: #4a3f6b;
-      font-weight: normal;
-    }
-
-    .homework-list-centered li a:hover {
-      color: #8c9ce8;
-    }
-
-    h2.homeworks-title {
-      text-align: center;
-      color: #a99fe8; /* same as your name */
-    }
-
     /* Stickers */
     .sticker {
       position: absolute;
@@ -200,21 +215,21 @@
 
     <a href="reflections.html" class="btn-link">Reading Reflections</a>
 
-    <h2 class="homeworks-title">Homeworks:</h2>
-    <ul class="homework-list-centered">
+    <h2>Homeworks:</h2>
+    <ul class="homework-list">
       <li>Homework #1 <a href="#">Link</a></li>
-      <li>Homework #2 <a href="#">Link</a></li>
-      <li>Homework #3 <a href="#">Link</a></li>
-      <li>Homework #4 <a href="#">Link</a></li>
-      <li>Homework #5 <a href="#">Link</a></li>
-      <li>Homework #6 <a href="#">Link</a></li>
-      <li>Homework #7 <a href="#">Link</a></li>
-      <li>Homework #8 <a href="#">Link</a></li>
-      <li>Homework #9 <a href="#">Link</a></li>
-      <li>Homework #10 <a href="#">Link</a></li>
+      <li>Homework #2
+        <a href="homework2-image1.html">Image 1</a>
+        <a href="homework2-image2.html">Image 2</a>
+      </li>
+      <li>Homework #3
+        <a href="homework3-part1.html">Part 1</a>
+        <a href="homework3part2.html">Part 2</a>
+      </li>
     </ul>
 
   </div>
 
 </body>
 </html>
+
