--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <title>MEDPL 150 Section 1 - Sauda Afrose</title>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Courgette&display=swap" rel="stylesheet">
   <style>
+    /* Full-page flower background */
     body {
-      background-color: #f7f0ff;
+      background: url('https://i.pinimg.com/736x/15/1b/b9/151bb9903a9b21e542a52ee2f355b458.jpg') no-repeat center center fixed;
+      background-size: cover;
       font-family: 'Quicksand', sans-serif;
       color: #4a3f6b;
       padding: 30px;
@@ -14,12 +16,11 @@
       justify-content: center;
     }
 
+    /* Container card */
     .container {
       max-width: 800px;
       width: 100%;
-      background: #fffdfa url('https://i.pinimg.com/736x/15/1b/b9/151bb9903a9b21e542a52ee2f355b458.jpg');
-      background-size: cover;
-      background-position: center;
+      background: rgba(255, 253, 250, 0.9); /* translucent to show background */
       padding: 30px 40px;
       border-radius: 20px;
       box-shadow: 5px 5px 15px rgba(0,0,0,0.1);
@@ -31,18 +32,15 @@
       text-align: center;
       font-family: 'Courgette', cursive;
       font-size: 2.4em;
-      margin-bottom: 25px;
-    }
-
-    h2 {
-      font-size: 1.7em;
-      margin-top: 30px;
       margin-bottom: 15px;
     }
 
     h2.homeworks-title {
       text-align: center;
-      color: #a99fe8; /* matches your name */
+      color: #a99fe8; /* matches name color */
+      font-size: 1.7em;
+      margin-top: 30px;
+      margin-bottom: 15px;
     }
 
     a {
@@ -195,7 +193,10 @@
   <div class="container">
     <h1>Sauda Afrose</h1>
 
-    <!-- Bio on top -->
+    <!-- Reading Reflections directly after name -->
+    <a href="reflections.html" class="btn-link">Reading Reflections</a>
+
+    <!-- Bio -->
     <div class="bio-container">
       <div class="bio-shadow"></div>
       <div class="bio">
@@ -205,7 +206,7 @@
       </div>
     </div>
 
-    <!-- Homeworks below bio -->
+    <!-- Homeworks -->
     <h2 class="homeworks-title">Homeworks:</h2>
     <ul class="homework-list-clean">
       <li>Homework #1
@@ -227,12 +228,11 @@
       <li>Homework #9</li>
       <li>Homework #10</li>
     </ul>
-
-    <a href="reflections.html" class="btn-link">Reading Reflections</a>
   </div>
 
 </body>
 </html>
+
 
 
 
