--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
       </div>
 
       <div class="homework-item">Homework #4</div>
+       Homework #4
+        <a href="Homework4Image2.html">Image 2</a>
       <div class="homework-item">Homework #5</div>
       <div class="homework-item">Homework #6</div>
       <div class="homework-item">Homework #7</div>
