--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@
 
       <div class="homework-item">Homework #4</div>
        Homework #4
+        <a href="Homework4Image1.html">Image1</a>
         <a href="Homework4Image2.html">Image 2</a>
+       </div>
+    
       <div class="homework-item">Homework #5</div>
       <div class="homework-item">Homework #6</div>
       <div class="homework-item">Homework #7</div>
