--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
         <a href="homework3part2.html">Part 2</a>
       </div>
 
-      <div class="homework-item">Homework #4</div>
-       Homework #4
-        <a href="Homework4Image1.html">Image1</a>
+      <div class="homework-item">
+        Homework #4
+        <a href="Homework4Image1.html">Image 1</a>
         <a href="Homework4Image2.html">Image 2</a>
        </div>
     
