--- a/index.html
+++ b/index.html
@@ -1,44 +1,176 @@
-<!doctype html>
-<html>
-  <head>
-    <title>MEDPL 150 Section 1 - Sauda Afrose</title>
-  </head>
-  <body>
-    <h1 style="color:red; text-align:center;">Sauda Afrose</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>MEDPL 150 Section 1 - Sauda Afrose</title>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;600&family=Courgette&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background: url('https://i.pinimg.com/736x/15/1b/b9/151bb9903a9b21e542a52ee2f355b458.jpg') center/cover no-repeat fixed;
+      font-family: 'Quicksand', sans-serif;
+      color: #4a3f6b;
+      padding: 40px;
+      display: flex;
+      justify-content: center;
+    }
 
-    <br><br>
+    .container {
+      max-width: 850px;
+      width: 100%;
+      background: rgba(255, 253, 250, 0.85); /* slightly transparent to show flower background */
+      padding: 35px 45px;
+      border-radius: 20px;
+      box-shadow: 6px 6px 20px rgba(0,0,0,0.15);
+      position: relative;
+    }
 
-    <h1><a href="reflections.html">Reading Reflections</a></h1>
+    h1 {
+      color: #a99fe8;
+      text-align: center;
+      font-family: 'Courgette', cursive;
+      font-size: 2.6em;
+      margin-bottom: 10px;
+    }
+
+    /* Reading Reflections link */
+    .btn-link {
+      display: block;
+      margin: 0 auto 30px auto;
+      padding: 12px 22px;
+      background-color: #d6c8ff;
+      color: #a99fe8;
+      border-radius: 12px;
+      font-weight: 600;
+      text-decoration: none;
+      text-align: center;
+      font-size: 1.1em;
+      box-shadow: 3px 4px 8px rgba(0,0,0,0.1);
+      transition: background-color 0.3s, color 0.3s;
+      width: fit-content;
+    }
+
+    .btn-link:hover {
+      background-color: #b8d0ff;
+      color: white;
+    }
+
+    h2 {
+      color: #a3c5ff;
+      font-size: 1.7em;
+      margin-top: 40px;
+      margin-bottom: 15px;
+      text-align: center;
+    }
+
+    /* Scrollable Bio section */
+    .bio-container {
+      margin-top: 25px;
+      margin-bottom: 40px;
+      background-color: #fffdfa;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 3px 4px 8px rgba(0,0,0,0.1);
+      line-height: 1.6;
+      font-size: 1em;
+      max-height: 250px;       /* limit height */
+      overflow-y: auto;        /* enable scrolling */
+    }
+
+    .bio-container::-webkit-scrollbar {
+      width: 8px;
+    }
+    .bio-container::-webkit-scrollbar-track {
+      background: #f0eaff;
+      border-radius: 10px;
+    }
+    .bio-container::-webkit-scrollbar-thumb {
+      background-color: #b8d0ff;
+      border-radius: 10px;
+    }
+
+    /* Homework section */
+    .homework-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 20px;
+      justify-items: center;
+      margin-top: 25px;
+    }
+
+    .homework-item {
+      background-color: #d6c8ff;
+      color: #4a3f6b;
+      font-weight: 600;
+      text-align: center;
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 3px 4px 8px rgba(0,0,0,0.15);
+      width: 160px;
+      transition: transform 0.2s;
+    }
+
+    .homework-item:hover {
+      transform: translateY(-3px);
+    }
+
+    .homework-item a {
+      display: block;
+      color: #4a3f6b;
+      font-weight: normal;
+      font-size: 0.95em;
+      text-decoration: none;
+      margin-top: 5px;
+    }
+
+    .homework-item a:hover {
+      color: #8c9ce8;
+    }
+
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Sauda Afrose</h1>
+    <a href="reflections.html" class="btn-link">Reading Reflections</a>
+
+    <div class="bio-container">
+      <p>
+        As the eldest daughter of an immigrant family and as a Muslim American, I aspire to use media to express the perspectives of minority groups in America. Often times in mainstream media sources, minority groups and women of color aren't accurately depicted. I've noticed this pattern in many media sources which is why I chose to major in Media Studies with a concentration in Journalism at Hunter College. I wanted to combine my love for writing, design and social justice and express that through media which is now the most widely consumed creation in today's polarized world.
+      </p>
+      <p>
+        Due to that interest, I hope to talk about propaganda and media in this class and how different people can perceive one piece of media in different ways. So far my work in media has mostly revolved around graphic design. I have done graphic designing for a publishing company in the past and now I do it for Hunter College's BSA club through Canva. However, I believe I still have a lot to learn about the different features and functions of graphic design which I hope to learn in this class. The only graphic design platform I know how to use is Canva but I hope to expand that knowledge to platforms like Photoshop. When designing, I find myself drawn to vintage aesthetics or aesthetics that reflect my South Asian heritage. I like using softer colors as opposed to brighter ones and I love playing with patterns, fonts and word formats. I like using pictures in my designs and I like making my designs a bit quirky and messy as opposed to brushed up and elegant.
+      </p>
+    </div>
+
+    <h2>Homeworks</h2>
+    <div class="homework-list">
+      <div class="homework-item">Homework #1</div>
+
+      <div class="homework-item">
+        Homework #2
+        <a href="homework2-image1.html">Image 1</a>
+        <a href="homework2-image2.html">Image 2</a>
+      </div>
+
+      <div class="homework-item">
+        Homework #3
+        <a href="homework3-part1.html">Part 1</a>
+        <a href="homework3part2.html">Part 2</a>
+      </div>
+
+      <div class="homework-item">
+        Homework #4
+        <a href="Homework4Image1.html">Image 1</a>
+        <a href="Homework4Image2.html">Image 2</a>
+       </div>
     
-    <h2>Homeworks:</h2>
-    <ul>
-      <li>Homework #1</li>
-
-      <li>Homework #2
-        <ul>
-          <li><a href="homework2-image1.html">Homework 2 Image 1</a></li>
-          <li><a href="homework2-image2.html">Homework 2 Image 2</a></li>
-        </ul>
-      </li>
-
-      <li>Homework #3
-        <ul>
-          <li><a href="homework3-part1.html">Homework 3 Part 1</a></li>
-          <li><a href="homework3part2.html">Homework 3 Part 2</a></li>
-        </ul>
-      </li>
-
-      <li>Homework #4
-        <ul>
-          <li><a href="Homework4Image1.html">Homework 4 Image 1</a></li>
-          <li><a href="Homework4Image2.html">Homework 4 Image 2</a></li>
-        </ul>
-      </li>
-    </ul>
-
-    <br>
-
-    <p>
-      As the eldest daughter of an immigrant family and as a Muslim American, I aspire to use media to express the perspectives of minority groups in America. Often times in mainstream media sources, minority groups and women of color aren't accurately depicted. I've noticed this pattern in many media sources which is why I chose to major in Media Studies with a concentration in Journalism at Hunter College. I wanted to combine my love for writing, design and social justice and express that through media which is now the most widely consumed creation in today's polarized world. Due to that interest, I hope to talk about propaganda and media in this class and how different people can perceive one piece of media in different ways. So far my work in media has mostly revolved around graphic design. I have done graphic designing for a publishing company in the past and now I do it for Hunter College's BSA club through Canva. However, I believe I still have a lot to learn about the different features and func
-
-
+      <div class="homework-item">Homework #5</div>
+      <div class="homework-item">Homework #6</div>
+      <div class="homework-item">Homework #7</div>
+      <div class="homework-item">Homework #8</div>
+      <div class="homework-item">Homework #9</div>
+      <div class="homework-item">Homework #10</div>
+    </div>
+  </div>
+</body>
+</html>
