--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 
       <div class="homework-item">
         Homework #4
-        <a href="Homework4Image1.html">Image 1</a>
-        <a href="Homework4Image2.html">Image 2</a>
+        <a href="homework4image1.html">Image 1</a>
+        <a href="homework4image2.html">Image 2</a>
        </div>
     
       <div class="homework-item">Homework #5</div>
