--- a/homework4image2.html
+++ b/homework4image2.html
@@ -14,7 +14,7 @@
 
     <pThe purpose of this collage is to show my appreciation for key women in my life, like my mom and my friends. In the media and in many parts of society, women are pitted against each other and many girls grow up with negative perceptions of female friendships. In books, movies, and series women's friendships are rarely portrayed, and when they are, they're portrayed with mostly negativity and jealousy. Also, in the fairy tales we grew up with such as Cinderella or Rapunzel, the female characters are villainized. I have always found this a bit absurd because I believe I am at this point of my life because of the women who constantly support and uplift me. I think that friendships between women can be so beautiful, but we are always shown to be each other's enemies. To express this frustration, I created this collage where I used a crinkly paper background, a group of friends hugging and one of my favorite poems to describe the admirable bond between women. I used the multiply layer mode and the linear burn layer mode to mesh the pictures together, highlight the text, and give it an overall scrapbook aesthetic or old school aesthetic:</p>
 
-    <img src=" Homework 4-Image 2.jpg alt="Homework 4 Image 2" width="600">
+    <img src="Homework4-Image2.jpg.jpg alt="Homework 4 Image 2" width="600">
 
     <br><br>
 
