--- a/homework4image1.html
+++ b/homework4image1.html
@@ -14,13 +14,13 @@
 
     <pThe purpose of this collage is to illustrate the inner conflict I face trying to balance my roots in Bangladesh and my life here. Ever since my family and 1 immigrated here, I have always felt the difficulty of staying true to your culture and trying fit in to a new environment with so many people of different backgrounds. To express this I created a collage to appreciate my younger self and the inner turmoils she faced trying trying to stay loyal to both identities. I used the clipping mask tool to show the most important parts of my life in Bangladesh, such as doing henna and going to the Pohela Boisakh parade, or the Bengali New Years parade. I also showed some of the important parts of my life here such as going to college or having pizza with friends. I masked these all to a picture of two hands clasped together to show how even though my identities are different they come together to make who I am today. In the background I used small, closing cracks to show that even though I'm still working on finding that perfect balance between my identities, I'm doing better than before. :</p>
 
-    <img src=" Homework4-Image1.jpg alt="Homework 4 Image 1" width="600">
+    <img src="Homework4-Image1.jpg alt="Homework 4 Image 1" width="600">
 
     <br><br>
 
     <a href="index.html">Back to Home</a>
     <br>
-     <a href="Homework4Image2.html">HW 4 Image 2</a>
+     <a href="homework4image2.html">HW 4 Image 2</a>
     
   </body>
 
