--- a/homework4image2.html
+++ b/homework4image2.html
@@ -20,7 +20,7 @@
 
     <a href="index.html">Back to Home</a>
     <br>
-     <a href="Homework4Image1.html">HW 4 Image 1</a>
+     <a href="homework4image1.html">HW 4 Image 1</a>
     
   </body>
 
