--- a/homework4image2.html
+++ b/homework4image2.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>Homework 4 Image 1</title>
+    <title>Homework 4 Image 2</title>
   </head>
   <body>
-    <h1>Homework 4 Image 1</h1>
+    <h1>Homework 4 Image 2</h1>
 
     <p>
-      The purpose of this collage is to illustrate the inner conflict I face trying to balance my roots in Bangladesh and my life here. Ever since my family and I immigrated here, I have always felt the difficulty of staying true to my culture while trying to fit into a new environment with so many people of different backgrounds. To express this, I created a collage to appreciate my younger self and the inner turmoils she faced trying to stay loyal to both identities. I used the clipping mask tool to show the most important parts of my life in Bangladesh, such as doing henna and going to the Pohela Boisakh parade, or the Bengali New Year's parade. I also showed some of the important parts of my life here, such as going to college or having pizza with friends. I masked these all to a picture of two hands clasped together to show how even though my identities are different, they come together to make who I am today. In the background, I used small, closing cracks to show that even though I'm still working on finding that perfect balance between my identities, I'm doing better than before.
+      The purpose of this collage is to represent how identity is constantly evolving and adapting. I wanted to explore the feeling of existing between two cultures — being connected to both yet not fully belonging to either. To show this, I used layering and opacity effects to blend images from both my Bangladeshi background and my life in the U.S. The collage includes photos of traditional foods and clothing overlapping with modern city scenes and everyday life here. The fading transitions represent how the two sides of my identity coexist rather than compete. I used the brush and blending tools to emphasize fluidity and movement between the images, symbolizing personal growth and cultural harmony.
     </p>
 
-    <img src="Homework4-Image1.jpg" alt="Homework 4 Image 1" width="600">
+    <img src="Homework4-Image2.jpg" alt="Homework 4 Image 2" width="600">
 
     <br><br>
 
