--- a/homework4image2.html
+++ b/homework4image2.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>Homework 4 Image 2</title>
+    <title>Homework 4 Image 1</title>
   </head>
   <body>
-    <h1>Homework 4 Image 2</h1>
+    <h1>Homework 4 Image 1</h1>
 
     <p>
-      The purpose of this collage is to show my appreciation for key women in my life, like my mom and my friends. In the media and in many parts of society, women are pitted against each other and many girls grow up with negative perceptions of female friendships. In books, movies, and series, women's friendships are rarely portrayed, and when they are, they're portrayed with mostly negativity and jealousy. Also, in the fairy tales we grew up with such as Cinderella or Rapunzel, the female characters are villainized. I have always found this a bit absurd because I believe I am at this point in my life because of the women who constantly support and uplift me. I think that friendships between women can be so beautiful, but we are always shown to be each other's enemies. To express this frustration, I created this collage where I used a crinkly paper background, a group of friends hugging, and one of my favorite poems to describe the admirable bond between women. I used the multiply layer mode and the linear burn layer mode to mesh the pictures together, highlight the text, and give it an overall scrapbook or old-school aesthetic.
+      The purpose of this collage is to illustrate the inner conflict I face trying to balance my roots in Bangladesh and my life here. Ever since my family and 1 immigrated here, I have always felt the difficulty of staying true to your culture and trying fit in to a new environment with so many people of different backgrounds. To express this I created a collage to appreciate my younger self and the inner turmoils she faced trying trying to stay loyal to both identities. I used the clipping mask tool to show the most important parts of my life in Bangladesh, such as doing henna and going to the Pohela Boisakh parade, or the Bengali New Years parade. I also showed some of the important parts of my life here such as going to college or having pizza with friends. I masked these all to a picture of two hands clasped together to show how even though my identities are different they come together to make who I am today. In the background I used small, closing cracks to show that even though I'm still working on finding that perfect balance between my identities, I'm doing better than before.
     </p>
 
-    <img src="Homework4-Image2.jpg" alt="Homework 4 Image 2" width="600">
+    <img src="Homework4-Image1.jpg" alt="Homework 4 Image 1" width="600">
 
     <br><br>
 
