--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
         <a href="homework4image1.html">Image 1</a>
         <a href="homework4image2.html">Image 2</a>
        </div>
+
+       <div class="homework-item">
+        Homework #5
+        <a href="homework5image.html">Image 1</a>
+       </div>
     
       <div class="homework-item">Homework #5</div>
       <div class="homework-item">Homework #6</div>
