--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
         Homework #6
         <a href="homework6image.html">Image 1</a>
        </div>
+
+       <div class="homework-item">
+        Homework #7
+        <a href="homework7imagel.html">Image 1 (Original(</a>
+        <a href="homework7image2.html">Image 2</a>
+      </div>
     
     
       <div class="homework-item">Homework #7</div>
