--- a/homework7image1.html
+++ b/homework7image1.html
@@ -14,7 +14,7 @@
 
     <p>This is my original image</p>
 
-    <img src="Homework 7 - Image 1.avif" alt="Homework 7 Image 1" width="600">
+    <img src="Homework 7 - Image 1.jpg" alt="Homework 7 Image 1" width="600">
 
     <br><br>
 
