--- a/index.html
+++ b/index.html
@@ -185,11 +185,16 @@
         <a href="homework8gif1.html">Gif 1</a>
         <a href="homework8gif2.html">Gif 2</a>
       </div>
+
+       <div class="homework-item">
+        Homework #9
+        <a href="homework9.html">Image</a>
+       </div>
     
     
-      <div class="homework-item">Homework #9</div>
       <div class="homework-item">Homework #10</div>
     </div>
   </div>
 </body>
 </html>
+
