--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
        <div class="homework-item">
         Homework #9
-        <a href="homework9.html">Image</a>
+        <a href="homework9.html">Image 1</a>
        </div>
     
     
