--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <!-- Buttons side by side -->
     <div style="text-align: center; margin-bottom: 30px;">
       <a href="reflections.html" class="btn-link">Reading Reflections</a>
-      <a href="https://github.com/yourusername/your-repo" class="btn-link" target="_blank">Interactive Story</a>
+      <a href="https://saudaafrose07.github.io/MEDPL-50---Interactive-Story-Assignment-HW-10-/" class="btn-link" target="_blank">Interactive Story</a>
     </div>
 
     <div class="bio-container">
@@ -194,7 +194,7 @@
     
       <div class="homework-item">
         Homework #10
-        <a href="https://github.com/yourusername/your-repo" target="_blank">GitHub Repo</a>
+        <a href="https://saudaafrose07.github.io/MEDPL-50---Interactive-Story-Assignment-HW-10-/" target="_blank">GitHub Repo</a>
       </div>
     </div>
   </div>
