--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     
       <div class="homework-item">
         Homework #10
-        <a href="https://saudaafrose07.github.io/MEDPL-50---Interactive-Story-Assignment-HW-10-/" target="_blank">GitHub Repo</a>
+        <a href="https://saudaafrose07.github.io/MEDPL-50---Interactive-Story-Assignment-HW-10-/" target="_blank">Interactive Story</a>
       </div>
     </div>
   </div>
